--- a/users/templates/register.html
+++ b/users/templates/register.html
@@ -166,6 +166,11 @@
       </div>
 
       <div class="col-md-6">
+        <label for="email" class="form-label">Email</label>
+        <input type="text" name="email" id="email" class="form-control" required>
+      </div>
+
+      <div class="col-md-6">
         <label for="password" class="form-label">Password</label>
         <input type="password" name="password" id="password" class="form-control" required>
       </div>
