--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -153,7 +153,9 @@
     <div class="welcome-title">Welcome Back</div>
     <p class="welcome-text">Log in to your account and continue shopping with ease</p>
 
-    <form method="POST" action="{% url 'homepage' %}">
+    
+    <form method="POST" action="{% url 'login' %}">
+    <!--<form method="POST"></form> action="{% url 'homepage' %}">-->
         {% csrf_token %}
     
         <!-- ✅ Show form errors -->
