--- a/users/templates/homepage.html
+++ b/users/templates/homepage.html
@@ -27,15 +27,20 @@
                             <button type="submit" class="btn btn-sm ms-2 mt-1" style="background-color: #6c757d; color: white; border: none;">Delete My Account</button>
                         </form>
                     </li>-->
-                    {% if user.is_authenticated %}
-                        {% ifuser.role == "seller" %}
-                        <!-- content for sellers -->
+                    {% if user.is_authenticated%}
+                        {% if user.role == "buyer" %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'update' %}">Update Profile</a>
+                            </li>
                         {% endif %}
                     <li class="nav-item">
                         <span class="nav-link text-success">Welcome, {{ user.username }}     Role:  {{user.role}}</span>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Shop</a>
                     </li>
                     <li class="nav-item">
                         <form action="{% url 'delete_account' %}" method="POST"
@@ -45,16 +50,11 @@
                                 style="background-color: #6c757d; color: white; border: none;">Delete My Account</button>
                         </form>
                     </li>
-                {% else %}
+                    {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'login' %}">Login</a>
                     </li>
-                {% endif %}
-
-        
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Shop</a>
-                    </li>
+                    {% endif %}
                     <li class="nav-item">
                         <a class="nav-link" href="#">About Us</a>
                     </li>
