--- a/users/templates/homepage.html
+++ b/users/templates/homepage.html
@@ -6,6 +6,18 @@
     <title>Homepage - eCommerce Webstore</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+    html, body {
+        height: 100%;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        }
+
+        main {
+        flex: 1;
+        }
+    </style>
 </head>
 <body>
 
@@ -43,7 +55,7 @@
                         <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Shop</a>
+                        <a class="nav-link" href="{% url 'view_cart' %}">Cart</a>
                     </li>
                     <li class="nav-item">
                         <form action="{% url 'delete_account' %}" method="POST"
@@ -62,7 +74,7 @@
             </div>
         </div>
     </nav>
-
+    <main>
     <!-- Hero Section -->
     <div class="container-fluid bg-primary text-white text-center py-5">
         <h1>Welcome to ShopMaster!</h1>
@@ -113,22 +125,28 @@
         </div>
     </div>
     -->
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-        {% for item in items %}
-        <div class="col">
-            <div class="card">
-                <img src="{{ item.item_photo.url }}" class="card-img-top" alt="{{ item.name }}" style="width: 200px; height: 200px; object-fit: cover;">
-                <div class="card-body">
-                    <h5 class="card-title">{{ item.name }}</h5>
-                    <p class="card-text">{{ item.description }}</p>
-                    <p class="card-text"><strong>${{ item.price }}</strong></p>
-                    <a href="#" class="btn btn-primary">Add to Cart</a>
-                </div>
+    <div class="container px-5 mt-4">
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+          {% for item in items %}
+          <div class="col">
+            <div class="card p-3" style="background-color: #f2f2f2; border: 2px solid black;"> <!-- Thicker border -->
+              <img src="{{ item.item_photo.url }}"
+                   class="card-img-top mx-auto d-block"
+                   alt="{{ item.name }}"
+                   style="width: 200px; height: 200px; object-fit: cover; border: 2px solid black;">
+              <div class="card-body text-center">
+                <h5 class="card-title">{{ item.name }}</h5>
+                <p class="card-text">{{ item.description }}</p>
+                <p class="card-text"><strong>${{ item.price }}</strong></p>
+                <a href="#" class="btn btn-primary">Add to Cart</a>
+              </div>
             </div>
+          </div>
+          {% endfor %}
         </div>
-        {% endfor %}
-    </div>
-    
+      </div>
+      
+    </main>
     <!-- Footer Section -->
     <footer class="bg-dark text-white text-center py-3">
         <p>&copy; 2025 ShopMaster | All rights reserved</p>
