--- a/users/templates/homepage.html
+++ b/users/templates/homepage.html
@@ -39,6 +39,21 @@
                             <button type="submit" class="btn btn-sm ms-2 mt-1" style="background-color: #6c757d; color: white; border: none;">Delete My Account</button>
                         </form>
                     </li>-->
+                    {% if user.is_authenticated and user.role == 'Admin' %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'admin_monitor_users' %}">Monitor Users</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'admin_monitor_products' %}">Monitor Products</a>
+                        </li>
+                    {% endif %}
+                    {% if user.is_authenticated %}
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url 'login' %}">Login</a>
+                        </li>
+                    {% endif %}
+
                     {% if user.is_authenticated%}
                     <li class="nav-item">
                         <span class="nav-link text-success">Welcome, {{ user.username }}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;Role:  {{user.role}}</span>
@@ -145,7 +160,7 @@
           {% endfor %}
         </div>
       </div>
-      
+
     </main>
     <!-- Footer Section -->
     <footer class="bg-dark text-white text-center py-3">
