--- a/users/templates/admin_monitor_products.html
+++ b/users/templates/admin_monitor_products.html
@@ -27,7 +27,7 @@
                         <td>{{ product.description }}</td>
                         <td>${{ product.price }}</td>
                         <td>{{ product.stock }}</td>
-                        <td>{{ product.vendor }}</td>
+                        <td>{{ product.vendor.username }}</td>
                     </tr>
                 {% endfor %}
             </tbody>
